--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
             "email": "faozimipa@gmail.com"
         }
     ],
-    "minimum-stability": "1.0-dev",
     "require": {
         "php": ">=7.0",
         "illuminate/support": "~5.5",
@@ -33,7 +32,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "dev"
+            "dev-master": "1.0-dev"
         },
         "laravel": {
             "providers": [
